--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,10 +1,10 @@
 {
   "name": "api-gateway",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.ts"
+    "start": "nodemon ./src/server.ts"
   },
   "keywords": [],
   "author": "",
