--- a/cfp-service/Dockerfile
+++ b/cfp-service/Dockerfile
@@ -1,10 +1,19 @@
 FROM node:18
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y netcat-openbsd
+
 COPY package*.json ./
 RUN npm install
 
 COPY . .
 RUN npx tsc
 
-CMD ["node", "dist/server.js"]
+COPY ./src/config ./dist/config
+
+COPY wait-for.sh /wait-for.sh
+RUN chmod +x /wait-for.sh
+
+# CMD ["npm", "run", "dev"]
+CMD sh -c "/wait-for.sh mysql npm run setup && npm run dev"
+# CMD ["node", "dist/server.js"]
