--- a/user-service/package.json
+++ b/user-service/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ts-node src/app.ts",
+    "dev": "nodemon --watch src --exec ts-node src/app.ts",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all",
-    "seed:undo": "npx sequelize-cli db:seed:undo:all"
+    "seed:undo": "npx sequelize-cli db:seed:undo:all",
+    "setup": "npm run migrate && npm run seed"
   },
   "keywords": [],
   "author": "",
