--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/sequelize": "^4.28.20",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "cpx": "^1.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
